Fixed dish cards not centered

--- a/src/styles.css
+++ b/src/styles.css
@@ -104,13 +104,16 @@ button:hover{
 
 .menu-wrapper{
     display:flex;
+    width: 95%;
+    margin: 0 auto;
     flex-wrap: wrap;
     flex: 1;
+    gap: 20px;
     min-width: 0;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    margin: 3% 0 3% 0;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .menu-wrapper img{
@@ -126,7 +129,6 @@ button:hover{
 
 .dish-card{
     display: flex;
-    gap: 20px;
     border: black solid 2px;
     width: 90%;
     max-width: 600px;
@@ -196,6 +198,10 @@ button:hover{
     .text-container button{
         align-self: center;
         margin-bottom: 20px;
+    }
+
+    .menu-wrapper{
+        align-items: center;
     }
 
     .dish-card {
